<resources>
    <string name="app_name">Story App</string>
    <string name="SignIn">Sign In</string>
    <string name="email">Email</string>
    <string name="email_hint">Write down your email address…</string>
    <string name="password">Password</string>
    <string name="password_hint">Write down your password here…</string>
    <string name="password_error">Password must be at least 8 characters long.</string>
    <string name="email_pattern">[a-zA-Z0-9._-]+@[a-z]+\\.+[a-z]+</string>
    <string name="email_error">Email address invalid.</string>
    <string name="SignUp">Sign Up</string>
    <string name="name">Name</string>
    <string name="switchToSignUp">Don’t have an account?</string>
    <string name="switchToSignIn">Already have an account?</string>
    <string name="sign_up_success">Sign up success</string>
    <string name="sign_in_success">Sign in success</string>
    <string name="logout">Logout</string>
    <string name="description">This is Description</string>
    <string name="tanggal">22 October</string>
    <string name="share_message">\"%1$s...\" \nRead the full story of %2$s on the Story App.</string>
    <string name="location">Jakarta, Indonesia</string>
    <string name="add_story">Add Story</string>
    <string name="next">Next</string>
    <string name="retake">Retake</string>
    <string name="description_title">Description</string>
    <string name="description_hint">Write your description here...</string>
    <string name="submitPost">Post</string>
    <string name="set_language">Set Language</string>
    <string name="img_story">imgStory</string>
    <string name="empty_text">NO DATA</string>
    <string name="empty_item">Empty Item</string>
    <string name="img_desc">Story image to be posted.</string>
    <string name="logout_success">Logout success</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="retry">Try Again</string>
    <string name="add_location">Add location to the story</string>
    <string name="rejected_permission">Permission request denied</string>
    <string name="permission_request_granted">Permission request granted</string>
    <string name="data_is_empty">Data is empty</string>
    <string name="response_data_is_empty">Response data is empty</string>
</resources>